# Nameplate

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: nameplate.yml
src/: Nameplate.cpp  Nameplate.h  exports.def  findsignature.cppm  versioninfo.rc.in
src/Ashita/: Ashita.cpp  exports.h
src/Windozer/: Windozer.cpp  Windozer.h
src/assembly/: DrawDamagePatch.asm  DrawName3Patch.asm  DrawName3V2Patch.asm  DrawNamePatch0.asm  DrawNamePatch1.asm
src/bytes/: bytes.h
